syncs public-dm-36-pgre-register-to-amplitude-bne-prod changed in Hightouch

--- a/bne/syncs/public-dm-36-pgre-register-to-amplitude-bne-prod.yaml
+++ b/bne/syncs/public-dm-36-pgre-register-to-amplitude-bne-prod.yaml
@@ -18,7 +18,7 @@ config:
     - to: BNID
       from: bnid
       type: standard
-    - to: ユーザーID
+    - to: service_user_id
       from: service_user_id
       type: standard
     - to: サービス名
