--- a/bne/syncs/public-dm-30-sidem-mission-1-to-amplitude-bne-prod.yaml
+++ b/bne/syncs/public-dm-30-sidem-mission-1-to-amplitude-bne-prod.yaml
@@ -2,7 +2,10 @@ model: public-dm-30-sidem-mission-1
 destination: amplitude-bne-prod
 config:
   type: event
-  mappings: []
+  mappings:
+    - to: insert_id
+      from: ID
+      type: standard
   eventName:
     column: event_type
   userIdFrom: user_id
