syncs test-dm-reward-2210-2211-to-ahamo-test changed in Hightouch

--- a/docomo_oneshot/syncs/test-dm-reward-2210-2211-to-ahamo-test.yaml
+++ b/docomo_oneshot/syncs/test-dm-reward-2210-2211-to-ahamo-test.yaml
@@ -2,7 +2,10 @@ model: test-dm-reward-2210-2211
 destination: ahamo-test
 config:
   type: event
-  mappings: []
+  mappings:
+    - to: insert_id
+      from: ID
+      type: standard
   eventName:
     column: event_type
   userIdFrom: user_id
