created test models

--- a/docomo_oneshot/models/test-dm-dpoint-give-history-2210-2211.yaml
+++ b/docomo_oneshot/models/test-dm-dpoint-give-history-2210-2211.yaml
@@ -1,4 +1,4 @@
-name: prod_POC.DM_DPOINT_GIVE_HISTORY_2210_2211_1
+name: TEST_DM_DPOINT_GIVE_HISTORY_2210_2211
 source: snowflake
 type: raw_sql
 rawSql: |-
@@ -14,6 +14,7 @@ rawSql: |-
         DM_DPOINT_GIVE_HISTORY_2210_2211.DPOINT_GIVE_HISTORY_DISPLAY_NAME AS "付与費目",
         DM_DPOINT_GIVE_HISTORY_2210_2211.kikan_limit_flg AS "有効期限有無",
         DM_DPOINT_GIVE_HISTORY_2210_2211.PERIOD_USE_LIMITED_DPOINT_MEASURES_END_DAY AS "有効期限"
-  FROM POC.DM_DPOINT_GIVE_HISTORY_2210_2211_1 AS "DM_DPOINT_GIVE_HISTORY_2210_2211"
+  FROM POC.DM_DPOINT_GIVE_HISTORY_2210_2211_0 AS "DM_DPOINT_GIVE_HISTORY_2210_2211"
+  LIMIT 100
 isSchema: false
 primaryKey: ID
