--- a/docomo_oneshot/models/test-dm-dcard-give-2210-2211.yaml
+++ b/docomo_oneshot/models/test-dm-dcard-give-2210-2211.yaml
@@ -1,4 +1,4 @@
-name: prod_POC.DM_DCARD_GIVE_2210_2211
+name: TEST_DM_DCARD_GIVE_2210_2211
 source: snowflake
 type: raw_sql
 rawSql: |-
@@ -13,5 +13,6 @@ rawSql: |-
         DM_DCARD_GIVE_2210_2211.ORDER_REGISTRATION_DAY AS "適用日",
         DM_DCARD_GIVE_2210_2211.ORDER_REGISTRATION_DATE AS "申し込み日"
   FROM POC.DM_DCARD_GIVE_2210_2211
+  LIMIT 100
 isSchema: false
 primaryKey: ID
