models test-dm-oomori-give-2210-2211 changed in Hightouch

--- a/docomo_oneshot/models/test-dm-oomori-give-2210-2211.yaml
+++ b/docomo_oneshot/models/test-dm-oomori-give-2210-2211.yaml
@@ -13,6 +13,7 @@ rawSql: |-
           DM_OOMORI_GIVE_2210_2211.ORDER_REGISTRATION_DAY AS "適用日",
           DM_OOMORI_GIVE_2210_2211.ORDER_REGISTRATION_DAY AS "大盛り契約_申し込み日"
   FROM POC.DM_OOMORI_GIVE_2210_2211
+  WHERE DM_OOMORI_GIVE_2210_2211.ACCTID IS NOT null
   LIMIT 100
 isSchema: false
 primaryKey: ID
